--- a/app/src/main/res/layout/city_card_view.xml
+++ b/app/src/main/res/layout/city_card_view.xml
@@ -1,94 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:elevation="2dp"
+              android:orientation="vertical"
               android:padding="10dp">
 
     <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="fill_parent"
         android:layout_height="250dp"
+        android:padding="2dp"
         card_view:cardCornerRadius="2dp"
-        android:elevation="2dp">
+        card_view:cardElevation="2dp"
+        card_view:cardUseCompatPadding="true">
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <RelativeLayout
+                android:id="@+id/left_card_part"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:layout_weight=".5"
-                android:id="@+id/left_card_part">
+                android:layout_weight=".5">
 
                 <TextView
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Large Text"
-                    android:id="@+id/name"
-                    android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginTop="25dp"/>
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="25dp"
+                    android:text="Large Text"
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
 
                 <TextView
+                    android:id="@+id/temp_min"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_alignLeft="@+id/max_temp"
+                    android:layout_alignStart="@+id/max_temp"
+                    android:layout_alignTop="@+id/imageView2"
                     android:text="Medium Text"
-                    android:id="@+id/temp_min"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+                <TextView
+                    android:id="@+id/max_temp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/imageView"
+                    android:layout_toEndOf="@+id/imageView"
+                    android:layout_toRightOf="@+id/imageView"
+                    android:text="Medium Text"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_above="@+id/imageView2"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="7dp"
+                    android:src="@mipmap/ic_max"
+                    android:tint="#d50000"/>
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginBottom="25dp"/>
+                    android:layout_marginBottom="5dp"
+                    android:src="@mipmap/ic_min"
+                    android:tint="#0091ea"/>
 
                 <TextView
+                    android:id="@+id/temp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:text="Medium Text"
-                    android:id="@+id/max_temp"
-                    android:layout_above="@+id/temp_min"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginBottom="25dp"/>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight=".5"
-                android:id="@+id/right_card_part">
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/temp"
+                    android:layout_toStartOf="@+id/temp"
+                    android:src="@mipmap/ic_temp"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/right_card_part"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight=".5">
+
+                <ImageView
+                    android:id="@+id/weather_image"
                     android:layout_width="128dp"
                     android:layout_height="128dp"
-                    android:id="@+id/weather_image"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"/>
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"/>
 
                 <TextView
+                    android:id="@+id/wind_speed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Small Text"
-                    android:id="@+id/wind_speed"
                     android:layout_below="@+id/weather_image"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="25dp"/>
+                    android:layout_marginTop="25dp"
+                    android:text="Small Text"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
 
                 <TextView
+                    android:id="@+id/weather_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/weather_text"
                     android:layout_above="@+id/weather_image"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="25dp"/>
+                    android:layout_marginBottom="25dp"
+                    android:text="Medium Text"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignBottom="@+id/wind_speed"
+                    android:layout_alignLeft="@+id/weather_image"
+                    android:layout_alignStart="@+id/weather_image"
+                    android:src="@mipmap/ic_wind"/>
             </RelativeLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
