--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -24,7 +24,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"/>
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/weekForecast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
