--- a/app/src/main/res/layout/detail_item.xml
+++ b/app/src/main/res/layout/detail_item.xml
@@ -8,15 +8,13 @@
         android:id="@+id/dateText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight=".2"
-        android:text="Large Text"
+        android:layout_weight=".4"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
 
     <TextView
         android:id="@+id/temp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight=".4"
-        android:text="New Text"/>
+        android:layout_weight=".6"/>
 
 </LinearLayout>
