--- a/app/src/main/res/layout/city_card_view.xml
+++ b/app/src/main/res/layout/city_card_view.xml
@@ -19,6 +19,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_gravity="center_horizontal"
+            android:baselineAligned="false"
             android:orientation="horizontal">
 
             <RelativeLayout
@@ -35,7 +36,6 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="25dp"
-                    android:text="Large Text"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
 
                 <TextView
@@ -45,7 +45,6 @@
                     android:layout_alignLeft="@+id/max_temp"
                     android:layout_alignStart="@+id/max_temp"
                     android:layout_alignTop="@+id/imageView2"
-                    android:text="Medium Text"
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 <TextView
@@ -55,7 +54,6 @@
                     android:layout_alignTop="@+id/imageView"
                     android:layout_toEndOf="@+id/imageView"
                     android:layout_toRightOf="@+id/imageView"
-                    android:text="Medium Text"
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 <ImageView
@@ -86,7 +84,6 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:text="Medium Text"
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 <ImageView
@@ -118,7 +115,6 @@
                     android:layout_below="@+id/weather_image"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="25dp"
-                    android:text="Small Text"
                     android:textAppearance="?android:attr/textAppearanceSmall"/>
 
                 <TextView
@@ -128,7 +124,6 @@
                     android:layout_above="@+id/weather_image"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="25dp"
-                    android:text="Medium Text"
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 <ImageView
