--- a/app/src/main/res/layout-small/activity_details.xml
+++ b/app/src/main/res/layout-small/activity_details.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:fab="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -22,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/cityName"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="5dp"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/weekForecast"
@@ -31,7 +32,7 @@
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/weatherImage"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp"/>
+        android:layout_marginTop="17dp"/>
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fab"
@@ -40,6 +41,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"/>
+        android:layout_margin="16dp"
+        fab:fab_type="mini"/>
 
 </RelativeLayout>
