--- a/app/src/main/res/layout-large/cities_list_fragment.xml
+++ b/app/src/main/res/layout-large/cities_list_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
-    <com.melnykov.fab.FloatingActionButton
+    <com.melnykov.fab.x
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
