--- a/app/src/main/res/layout-xlarge/activity_main.xml
+++ b/app/src/main/res/layout-xlarge/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight=".4"
+        android:tag="cities_list_frag"
         tools:layout="@layout/cities_list_fragment"/>
 
     <LinearLayout
