--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -34,4 +34,13 @@
         android:text="http://square.github.io/retrofit/"
         android:textAppearance="?android:attr/textAppearanceSmall"/>
 
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="android.support:appcompat (appcompat, Cardview, Recyclerview)"
+        android:textAppearance="?android:attr/textAppearanceSmall"/>
+
 </LinearLayout>
