--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="android.support:appcompat (appcompat, Cardview, Recyclerview)"
+        android:text="android.support (appcompat, Cardview, Recyclerview)"
         android:textAppearance="?android:attr/textAppearanceSmall"/>
 
 </LinearLayout>
